[gd_scene load_steps=6 format=3 uid="uid://ctcc1xykyq00a"]

[ext_resource type="Script" uid="uid://bguix6f7qhrc" path="res://Enemy_Boomer.gd" id="1_v5xp5"]
[ext_resource type="Texture2D" uid="uid://1ko7sgobbps7" path="res://assets/kenney/ufo/shipPink_damage.png" id="2_3lgjy"]
[ext_resource type="Texture2D" uid="uid://bmiyhoclflwra" path="res://assets/Circle-0001.png" id="3_2ty3q"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ggpuv"]
size = Vector2(128, 128)

[sub_resource type="CircleShape2D" id="CircleShape2D_ggpuv"]
radius = 300.0

[node name="EnemyKaboom" type="CharacterBody2D" groups=["Enemy"]]
collision_layer = 2
collision_mask = 3
script = ExtResource("1_v5xp5")
movement_speed = 150.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = -0.783591
scale = Vector2(1, 0.995555)
shape = SubResource("RectangleShape2D_ggpuv")

[node name="Enemy Sprite" type="Sprite2D" parent="."]
rotation = -0.783591
texture = ExtResource("2_3lgjy")

[node name="ExplosionDuration" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="Explosion" type="Area2D" parent="."]
collision_layer = 0
monitoring = false

[node name="ExplosionRadius" type="CollisionShape2D" parent="Explosion"]
shape = SubResource("CircleShape2D_ggpuv")
debug_color = Color(0.973523, 0, 0.433382, 0.42)

[node name="ExplosionSprite" type="Sprite2D" parent="Explosion"]
visible = false
modulate = Color(1, 0.176471, 0.231373, 1)
scale = Vector2(20, 20)
texture = ExtResource("3_2ty3q")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
path_desired_distance = 40.0
path_max_distance = 50.0
debug_path_custom_point_size = 20.0
debug_path_custom_line_width = 5.0

[node name="NavTimer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[connection signal="timeout" from="ExplosionDuration" to="." method="_on_explosion_duration_timeout"]
[connection signal="body_entered" from="Explosion" to="." method="Player_Hit"]
[connection signal="timeout" from="NavTimer" to="." method="_on_nav_timer_timeout"]
